--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,7 +28,8 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^0.1.3
-  animated_text_kit: ^2.2.0
+  google_fonts: ^1.1.0
+  shimmer: ^1.1.1
 
 dev_dependencies:
   flutter_test:
@@ -52,4 +53,5 @@ flutter:
 
   assets:
     - images/
+    - images/launch_screen/
 
