--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,7 +30,7 @@ dependencies:
   cupertino_icons: ^0.1.3
   google_fonts: ^1.1.0
   shimmer: ^1.1.1
-  location: ^3.0.2
+  geolocator: ^5.3.1
 
 dev_dependencies:
   flutter_test:
